codeword guess verify impl

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -173,7 +173,12 @@ a:hover {
     }
 
 #skippedAnswer{
+    color: rgb(237, 24, 72);
+    text-align: center;
+    font-weight: bold;
+}
 
+#errorMessage{
     color: rgb(237, 24, 72);
     text-align: center;
     font-weight: bold;
