--- a/src/main/resources/templates/team/main.html
+++ b/src/main/resources/templates/team/main.html
@@ -63,19 +63,8 @@
                                     <td th:text="${team.numOfMembers}">8</td>
                                     <td th:text="${team.pin}">9876</td>
                                     <td>
-                                        <a href="#" th:href="@{'/admin/team/update/'+${team.teamId}}">Upravit</a> |
-                                        <a href="#" th:href="@{'/admin/team/delete/'+${team.teamId}}">Smazat</a>
-                                    </td>
-                            </tr>
-                            <th:block th:each="team : ${teams}">
-                                <tr>
-                                    <td th:text="${team.teamId}">8888</td>
-                                    <td th:text="${team.name}">Bamboo</td>
-                                    <td th:text="${team.numOfMembers}">8</td>
-                                    <td th:text="${team.pin}">9876</td>
-                                    <td>
-                                        <a href="#" th:href="@{/team/update/{teamId}(teamId=${team.teamId})}">Upravit</a> |
-                                        <a href="#" th:href="@{/team/delete/{teamId}(teamId=${team.teamId})}">Smazat</a>
+                                        <a href="#" th:href="@{/admin/team/update/{teamId}(teamId=${team.teamId})}">Upravit</a> |
+                                        <a href="#" th:href="@{/admin/team/delete/{teamId}(teamId=${team.teamId})}">Smazat</a>
                                     </td>
                                 </tr>
                             </th:block>
