Add map to client cypher detail and fix bugs

--- a/src/main/resources/templates/team/main.html
+++ b/src/main/resources/templates/team/main.html
@@ -61,7 +61,7 @@
                             <tr>
                                 <td th:text="${team.teamId}">8888</td>
                                 <td th:text="${team.name}">Bamboo</td>
-                                <td th:text="${team.user.username}"></td>
+                                <td th:text="${team?.user?.username}"></td>
                                 <td th:text="${team.numOfMembers}">8</td>
                                 <td th:text="${team.pin}">9876</td>
                                 <td>
