Missing variable declaration

--- a/src/main/resources/templates/client/cypher/detail.html
+++ b/src/main/resources/templates/client/cypher/detail.html
@@ -146,7 +146,8 @@
             }
         </script>
         <script>
-            var map;
+            var map,
+                activeMarker;
 
             function initMap() {
                 map = new google.maps.Map(document.getElementById('map'), {
