--- a/src/main/resources/templates/client/cypher/detail.html
+++ b/src/main/resources/templates/client/cypher/detail.html
@@ -65,9 +65,11 @@
             <th:block th:case="'SKIPPED'">
                 <div class="pb-2">
                     <p id="skippedAnswer">Tuto šifru jste přeskočili</p>
-                    <a th:href="@{'/cypher/' + ${nextCypher.cypherId}}">
+                    <th:block th:unless="${nextCypher == null}">
+                        <a th:href="@{'/cypher/' + ${nextCypher.cypherId}}">
                         <button class="skippedGoNextButton"> Zobrazit další šifru </button>
-                    </a>
+                        </a>
+                    </th:block>
                 </div>
             </th:block>
 
@@ -75,9 +77,11 @@
                 <div>
                     <p id="correctAnswer"> Zadali jste správné heslo. Šifra byla vyluštěna!</p>
                     <b>Kam dál?</b>
-                    <a th:href="@{'/cypher/' + ${nextCypher.cypherId}}">
-                        <button class="correctButton"> Zobrazit další šifru </button>
-                    </a>
+                    <th:block th:unless="${nextCypher == null}">
+                        <a th:href="@{'/cypher/' + ${nextCypher.cypherId}}">
+                            <button class="correctButton"> Zobrazit další šifru </button>
+                        </a>
+                    </th:block>
                     <p id="bonusInfo" th:text="${cypher.bonusContent}"></p>
                     <a id="bonusButton">
                         <button class="btn-white" onclick="showBonus()"> Zobrazit bonusové informace </button>
