add score to client cypher list navbar

--- a/src/main/resources/templates/client/cypher/list.html
+++ b/src/main/resources/templates/client/cypher/list.html
@@ -16,7 +16,7 @@
 <nav class="navbar navbar-default navbarRed" >
     <div class="navbarContentCentered">
         <p class="bold floatLeft" th:text="${team.name}"></p>
-        <p class="floatLeft">Body:xx b</p>
+        <p class="floatLeft" th:text="|Aktuální skóre: ${score} b.|"></p>
     </div>
 
     <button class="btn" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1"
