pridano tlacitko pro zahajeni hry - inicializace statusu prvni sifry na pending a dalsich na locked

--- a/src/main/resources/templates/client/cypher/list.html
+++ b/src/main/resources/templates/client/cypher/list.html
@@ -16,7 +16,7 @@
 <nav class="navbar navbar-default navbarRed" >
     <div class="navbarContentCentered">
         <p class="bold floatLeft" th:text="${team.name}"></p>
-        <p class="floatLeft" th:text="|Aktuální skóre: ${score} b.|"></p>
+        <p class="floatLeft" th:text="|Aktuální skóre: ${score} b.|" th:if="${gameStarted == true}"></p>
     </div>
 
     <button class="btn" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1"
@@ -44,7 +44,7 @@
     </div>
 </nav>
 
-<div class="bodyContent">
+<div class="bodyContent" th:if="${gameStarted == true}">
     <h2  class="botMargin10">Sifry</h2>
     <div th:each="cypherGameInfo : ${cypherGameInfos}" class="hoverColor border-bottom p-10">
         <div class="row pb-3 pt-3">
@@ -72,6 +72,13 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</div>
+
+<div class="bodyContent" th:if="${gameStarted == false}">
+    <a href="#" class="btn btn-default btn-lg"
+       th:href="@{/cypher/startGame}">
+        Zahájit hru!
+    </a>
 </div>
 </body>
 </html>
