--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,3 +1,24 @@
+body {
+    font-family: 'Poppins', sans-serif;
+}
+
+h1 {
+    font-size: 2rem;
+    margin-top: 1.25rem;
+}
+
+h2{
+    font-size: 1.25rem;
+    font-weight: bold;
+    color: #757575;
+    margin-top: 1.25rem;
+}
+
+p{
+    text-align: justify;
+    color: #333333;
+}
+
 a {
     color: white;
 }
@@ -7,69 +28,75 @@ a:hover {
     text-decoration: none;
 }
 
-body {
-    font-family: 'Poppins', sans-serif;
-}
+/*.stageCol{*/
+    /*width: 10px;*/
+/*}*/
 
-h2{
-    margin-top: 0.5em;
-    margin-bottom: 1em;
-}
-
-p{
-    text-align: justify;
-}
-
-.stageCol{
-    width: 10px;
-}
-
-.navbarRed{
+.navbar-red{
     background-color: rgb(237, 24, 72);
     color: white;
-    padding: 0;
 }
 
-.navbar-nav .nav-link{
-    padding-left: 10px;
-    color: black;
+.navbar p {
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
-.nav-link:hover{
-    background-color: #e9ecef;
-    color: black;
+
+/*.navbar-nav .nav-link{*/
+    /*padding-left: 10px;*/
+    /*color: black;*/
+/*}*/
+
+/*.nav-link:hover{*/
+    /*background-color: #e9ecef;*/
+    /*color: black;*/
+/*}*/
+
+/*.collapsedActive{*/
+    /*background-color: #e9ecef;*/
+    /*color:white;*/
+/*}*/
+
+/*.collapsedActive .a{*/
+    /*padding-left: 10px;*/
+    /*color: white;*/
+/*}*/
+/*.collapsedNotActive{*/
+    /*background-color:white;*/
+    /*color: black;*/
+/*}*/
+
+/*.dropdown-divider-cst{*/
+    /*height: 0;*/
+    /*overflow: hidden;*/
+    /*border-top: 1px solid #e9ecef;*/
+/*}*/
+
+.navbar-content, .navbar-nav{
+    padding: 0.25rem;
 }
 
-.collapsedActive{
-    background-color: #e9ecef;
-    color:white;
+.navbar .fa{
+    color: #fff;
 }
 
-.collapsedActive .a{
-    padding-left: 10px;
-    color: white;
-}
-.collapsedNotActive{
-    background-color:white;
-    color: black;
+.navbar a{
+    color: #ccc;
 }
 
-.dropdown-divider-cst{
-    height: 0;
-    overflow: hidden;
-    border-top: 1px solid #e9ecef;
-}
-.navbarContentCentered{
-    height: 24px;
-    line-height: 24px;
-    text-align: center;
-    padding-left: 10px;
+.navbar .team-name {
+    font-weight: bold;
 }
 
-.floatLeft{
-    float: left;
-    margin-left:10px;
+.navbar-nav{
+    border-top: 1px solid #fff;
 }
+
+/*.floatLeft{*/
+    /*float: left;*/
+    /*margin-left:10px;*/
+/*}*/
 
 /*.container{*/
     /*padding: 20px;*/
@@ -95,88 +122,6 @@ p{
     /*color: rgb(237, 24, 72)*/
 /*}*/
 
-.btn{
-    background-color: rgb(237, 24, 72);
-    color: white;
-    padding: 7px 12px;
-    font-size: 18px;
-    cursor: pointer;
-    margin: 10px;
-    margin-top: 1rem;
-    transition: all 0.3s ease 0s;
-}
-
-.btn:hover{
-    background-color: white;
-    -webkit-box-shadow: 0px 3px 16px 2px rgba(0, 0, 0, 0.42);
-    -moz-box-shadow: 0px 3px 16px 2px rgba(0, 0, 0, 0.42);
-    box-shadow: 0px 3px 16px 2px rgba(0, 0, 0, 0.42);
-}
-
-.btn:focus{
-    box-shadow:none;
-}
-
-/*.btn-white {*/
-    /*background-color: white;*/
-    /*color: rgb(237, 24, 72);*/
-    /*width: 100%;*/
-    /*border-radius: 5px;*/
-    /*height: 45px;*/
-    /*margin-bottom: 15px;*/
-/*}*/
-
-/*.btn-white:hover {*/
-    /*-webkit-box-shadow: 0px 3px 10px 2px rgba(0, 0, 0, 0.42);*/
-    /*-moz-box-shadow: 0px 3px 10px 2px rgba(0, 0, 0, 0.42);*/
-    /*box-shadow: 0px 3px 10px 2px rgba(0, 0, 0, 0.42);*/
-/*}*/
-
-.btn-red {
-    background-color: rgb(237, 24, 72);
-    color: white;
-    width: 100%;
-    border-radius: 5px;
-    height: 45px;
-    margin-bottom: 15px;
-}
-
-.btn-red:hover {
-    -webkit-box-shadow: 0px 3px 10px 2px rgba(0, 0, 0, 0.42);
-    -moz-box-shadow: 0px 3px 10px 2px rgba(0, 0, 0, 0.42);
-    box-shadow: 0px 3px 10px 2px rgba(0, 0, 0, 0.42);
-}
-
-.correctButton{
-    color:white;
-    background-color: limegreen;
-    width: 100%;
-    border-radius: 5px;
-    height: 45px;
-    margin-bottom: 15px;
-}
-
-    .correctButton:hover{
-        -webkit-box-shadow: 0px 3px 10px 2px rgba(0, 0, 0, 0.42);
-        -moz-box-shadow: 0px 3px 10px 2px rgba(0, 0, 0, 0.42);
-        box-shadow: 0px 3px 10px 2px rgba(0, 0, 0, 0.42);
-    }
-
-/*#correctAnswer{*/
-    /*background-color: lightgreen;*/
-    /*color: green;*/
-    /*text-align: center;*/
-    /*font-weight: bold;*/
-/*}*/
-
-/*.skippedGoNextButton{*/
-    /*color:white;*/
-    /*background-color: rgb(237, 24, 72);*/
-    /*width: 100%;*/
-    /*border-radius: 5px;*/
-    /*height: 45px;*/
-    /*margin-bottom: 15px;*/
-/*}*/
 
 /*.skippedGoNextButton:hover{*/
     /*-webkit-box-shadow: 0px 3px 10px 2px rgba(0, 0, 0, 0.42);*/
@@ -184,21 +129,21 @@ p{
     /*box-shadow: 0px 3px 10px 2px rgba(0, 0, 0, 0.42);*/
 /*}*/
 
-#skippedAnswer{
-    color: rgb(237, 24, 72);
-    text-align: center;
-    font-weight: bold;
-}
+/*#skippedAnswer{*/
+    /*color: rgb(237, 24, 72);*/
+    /*text-align: center;*/
+    /*font-weight: bold;*/
+/*}*/
 
-#errorMessage{
-    color: rgb(237, 24, 72);
-    text-align: center;
-    font-weight: bold;
-}
+/*#errorMessage{*/
+    /*color: rgb(237, 24, 72);*/
+    /*text-align: center;*/
+    /*font-weight: bold;*/
+/*}*/
 
-.bold{
-    font-weight: bold;
-}
+/*.bold{*/
+    /*font-weight: bold;*/
+/*}*/
 
 /*.botMargin10{*/
     /*margin-bottom: 10px;*/
@@ -241,7 +186,6 @@ a{
 }
 
 a:hover{
-    background-color: #e9ecef;
     color: black;
     text-decoration: none;
 }
@@ -259,4 +203,36 @@ a:hover{
 
 #map {
     margin-bottom: 10px;
+}
+
+
+.container .btn {
+    width: 100%;
+    transition: all 0.3s ease 0s;
+    font-weight: bold;
+    -webkit-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.3);
+}
+
+.container .btn-red {
+    color: #FFF;
+    background-color: rgb(237, 24, 72);
+}
+
+.container .btn-white {
+    color: rgb(237, 24, 72);
+    background-color: white;
+}
+
+.container .btn-white:hover {
+    -webkit-box-shadow: 0px 3px 6px 2px rgba(0, 0, 0, 0.42);
+    -moz-box-shadow: 0px 3px 6px 2px rgba(0, 0, 0, 0.42);
+    box-shadow: 0px 3px 6px 2px rgba(0, 0, 0, 0.42);
+}
+
+.container .btn-red:hover {
+    -webkit-box-shadow: 0px 3px 16px 2px rgba(0, 0, 0, 0.42);
+    -moz-box-shadow: 0px 3px 16px 2px rgba(0, 0, 0, 0.42);
+    box-shadow: 0px 3px 16px 2px rgba(0, 0, 0, 0.42);
 }
