--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 
 h1 {
@@ -9,14 +9,14 @@ h1 {
 
 h2{
     font-size: 1.25rem;
-    font-weight: bold;
+    font-weight: 600;
     color: #757575;
     margin-top: 1.25rem;
 }
 
 p{
     text-align: justify;
-    color: #333333;
+    color: #555;
 }
 
 a {
@@ -26,6 +26,12 @@ a {
 a:hover {
     color:rgb(225,225,225);
     text-decoration: none;
+}
+
+p.error{
+    color: rgb(237, 24, 72);
+    font-weight: 600;
+    font-size: 0.75 rem;
 }
 
 /*.stageCol{*/
@@ -77,6 +83,10 @@ a:hover {
     padding: 0.25rem;
 }
 
+.navbar-content p{
+    color: #fff;
+}
+
 .navbar .fa{
     color: #fff;
 }
@@ -86,7 +96,7 @@ a:hover {
 }
 
 .navbar .team-name {
-    font-weight: bold;
+    font-weight: 600;
 }
 
 .navbar-nav{
@@ -161,7 +171,7 @@ a:hover {
     color: red;
 }
 
-.fa-spinner{
+.fa-spinner {
     color:deepskyblue;
 }
 
@@ -172,11 +182,16 @@ a:hover {
     /*margin-bottom: 15px;*/
 /*}*/
 
-#bonusInfo{
+#bonus-info {
     display: none;
 }
 
-#hintContent{
+#bonus-info p{
+    font-style: italic;
+    font-size: 0.9rem;
+}
+
+#hintContent {
     visibility: hidden;
     text-align: center;
 }
@@ -209,10 +224,12 @@ a:hover{
 .container .btn {
     width: 100%;
     transition: all 0.3s ease 0s;
-    font-weight: bold;
+    font-weight: 600;
     -webkit-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.3);
     -moz-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.3);
     box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.3);
+    margin-top: 0.2rem;
+    margin-bottom: 0.2rem;
 }
 
 .container .btn-red {
@@ -226,13 +243,21 @@ a:hover{
 }
 
 .container .btn-white:hover {
-    -webkit-box-shadow: 0px 3px 6px 2px rgba(0, 0, 0, 0.42);
-    -moz-box-shadow: 0px 3px 6px 2px rgba(0, 0, 0, 0.42);
-    box-shadow: 0px 3px 6px 2px rgba(0, 0, 0, 0.42);
+    -webkit-box-shadow: 0px 3px 16px 2px rgba(0, 0, 0, 0.42);
+    -moz-box-shadow: 0px 3px 16px 2px rgba(0, 0, 0, 0.42);
+    box-shadow: 0px 3px 16px 2px rgba(0, 0, 0, 0.42);
 }
 
 .container .btn-red:hover {
     -webkit-box-shadow: 0px 3px 16px 2px rgba(0, 0, 0, 0.42);
     -moz-box-shadow: 0px 3px 16px 2px rgba(0, 0, 0, 0.42);
     box-shadow: 0px 3px 16px 2px rgba(0, 0, 0, 0.42);
+}
+
+.last {
+    margin-bottom: 1rem;
+}
+
+.alert-light {
+    background-color: #f3f3f3;
 }
