--- a/src/main/resources/templates/client/cypher/detail.html
+++ b/src/main/resources/templates/client/cypher/detail.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="cz" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="cs" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700&amp;subset=latin-ext" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/style.css}"/>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta charset="UTF-8">
 
     <title>Detail šifry</title>
 
@@ -32,19 +32,15 @@
                 <li class="nav-item collapsedNotActive">
                     <a class=" nav-link" href="#">Šifry </a>
                 </li>
-                <div class="dropdown-divider-cst"></div>
                 <li class="nav-item collapsedNotActive">
                     <a class=" nav-link" href="#">Kartička</a>
                 </li>
-                <div class="dropdown-divider-cst"></div>
                 <li class="nav-item collapsedNotActive">
                     <a class=" nav-link" href="#">Kontakty</a>
                 </li>
-                <div class="dropdown-divider-cst"></div>
                 <li class="nav-item collapsedNotActive">
                     <a class=" nav-link" href="#">Odhlásit se</a>
                 </li>
-                <div class="dropdown-divider-cst"></div>
             </ul>
         </div>
     </nav>
@@ -63,7 +59,9 @@
                                 <!--<label for="guess">Řešení</label>-->
                                 <input id="guess" type="text" th:field="*{guess}" class="form-control" >
                                 <p th:if="${#fields.hasErrors('guess')}" th:class="'error'" th:errors="*{guess}" id="errorMessage"></p>
-                                <button class="btn btn-white" type ="btn btn-primary">Ověřit</button>
+                            </div>
+                            <div class="form-group">
+                                <button class="btn btn-white" type="submit">Ověřit</button>
                             </div>
                         </form>
                     </th:block>
@@ -90,13 +88,13 @@
                         <div th:if="${nextCypher}">
                             <h2>Kam dál?</h2>
                             <a class="btn btn-white" th:href="@{'/cypher/' + ${nextCypher.cypherId}}"
-                               role="button">Zobrazit další šifru </button></a>
+                               role="button">Zobrazit další šifru </a>
                         </div>
 
-                        <div id="bonusInfo" th:text="${cypher.bonusContent}" class="alert alert-light" role="alert">
-                            <a id="bonusButton">
-                                <button class="btn btn-white" onclick="showBonus()"> Zobrazit bonusové informace </button>
-                            </a>
+                        <button id="bonus-button" th:if="${cypher.bonusContent}" class="btn btn-white" onclick="showBonus()">Zobrazit bonusové informace</button>
+                        <div id="bonus-info">
+                            <h2>Bonusové informace</h2>
+                            <p th:text="${cypher.bonusContent}" class="alert alert-light" role="alert"></p>
                         </div>
                     </th:block>
                 </th:block>
@@ -109,7 +107,8 @@
                 <p th:text="${'GPRS: ' + cypher.location.y + ' ' + cypher.location.x}"></p>
                 <p th:text="${cypher.placeDescription}"></p>
                 <div id="map" style='width: 100%; height: 150px;'></div>
-                <button href="#" class="btn btn-white" type="submit">Zobrazit na mapě</button>
+                <a th:href="@{https://www.google.com/maps/search/?api=1&query={lat},{lng}(lat=${cypher.location.y}, lng=${cypher.location.x})}"
+                        class="btn btn-white" role="button">Zobrazit na mapě</a>
             </div>
         </div>
 
@@ -125,14 +124,7 @@
 
                     <form action="/hint" th:object="${cypher}">
                         <input type="hidden"  th:field="*{cypherId}" >
-                        <input type="hidden"  th:field="*{hints}" >
-                        <input type="hidden"  th:field="*{name}" >
-                        <input type="hidden"  th:field="*{stage}" >
-                        <input type="hidden"  th:field="*{placeDescription}" >
-                        <input type="hidden"  th:field="*{location}" >
-                        <input type="hidden"  th:field="*{codeword}" >
-                        <input type="hidden"  th:field="*{bonusContent}" >
-                        <button type="submit" class="btn-white">Získat nápovědu</button>
+                        <button type="submit" class="btn btn-white">Získat nápovědu</button>
                     </form>
                     <br/>
                 </div>
@@ -140,25 +132,21 @@
         </th:block>
 
         <th:block th:if="${status == 'PENDING'}">
-            <form onsubmit="return confirm('Opravdu to chcete vzdát?')" action="/cypher/giveUp" th:object="${cypher}" method="post">
-                <input type="hidden"  th:field="*{cypherId}" >
-                <input type="hidden"  th:field="*{hints}" >
-                <input type="hidden"  th:field="*{name}" >
-                <input type="hidden"  th:field="*{stage}" >
-                <input type="hidden"  th:field="*{placeDescription}" >
-                <input type="hidden"  th:field="*{location}" >
-                <input type="hidden"  th:field="*{codeword}" >
-                <input type="hidden"  th:field="*{bonusContent}" >
-                <br/>
-                <button class="btn-red" type="submit" onclick="">Vzdát šifru</button>
-            </form>
+            <div class="row last">
+                <div class="col-sm-12">
+                    <form onsubmit="return confirm('Opravdu to chcete vzdát?')" action="/cypher/giveUp" th:object="${cypher}" method="post">
+                        <input type="hidden"  th:field="*{cypherId}" >
+                        <button class="btn btn-red" type="submit" onclick="">Vzdát šifru</button>
+                    </form>
+                </div>
+            </div>
         </th:block>
 
         <script>
             function showBonus() {
-                var bonusInfo = document.getElementById("bonusInfo");
+                var bonusInfo = document.getElementById("bonus-info");
                 bonusInfo.style.display = "block";
-                var bonusButton = document.getElementById("bonusButton");
+                var bonusButton = document.getElementById("bonus-button");
                 bonusButton.style.display = "none";
             }
         </script>
@@ -169,7 +157,11 @@
             function initMap() {
                 map = new google.maps.Map(document.getElementById('map'), {
                     zoom: 14,
-                    center: getCypherLocation()
+                    center: getCypherLocation(),
+                    disableDefaultUI: true,
+                    gestureHandling: 'none',
+                    zoomControl: false,
+                    draggable: false
                 });
                 addMarkerFromForm();
             }
