--- a/src/main/resources/templates/score/list.html
+++ b/src/main/resources/templates/score/list.html
@@ -22,24 +22,24 @@
                 <th>Score</th>
                 <th>Akce</th>
             </tr>
-            <tr th:if="${teamsAndScores.empty}">
+            <tr th:if="${teamsWithScores.empty}">
                 <td colspan="4"><p> V systému nejsou týmy</p></td>
             </tr>
             </thead>
-            <th:block th:each="teamAndScore : ${teamsAndScores}">
+            <th:block th:each="teamWithScore : ${teamsWithScores}">
                 <tr>
-                    <td th:text="${teamAndScore.team.teamId}" align="center">1</td>
-                    <td th:text="${teamAndScore.team.name}" align="center">Borci</td>
+                    <td th:text="${teamWithScore.team.teamId}" align="center">1</td>
+                    <td th:text="${teamWithScore.team.name}" align="center">Borci</td>
                     <td align="center">
 
-                        <span th:if="${teamAndScore.team.teamId != null}"
-                              th:text="${teamAndScore.score}">
+                        <span th:if="${teamWithScore.team.teamId != null}"
+                              th:text="${teamWithScore.score}">
                         </span>
 
                     </td>
                     <td align="center">
                         <a href="#"
-                           class="btn btn-default btn-lg" th:href="@{/game/score/team(teamId=${teamAndScore.team.teamId})}">
+                           class="btn btn-default btn-lg" th:href="@{/game/score/team(teamId=${teamWithScore.team.teamId})}">
                             Detail score
                         </a>
                     </td>
