--- a/src/main/resources/templates/cypher/list.html
+++ b/src/main/resources/templates/cypher/list.html
@@ -51,7 +51,7 @@
 
             <tr>
                 <td colspan="6" align="center">
-                    <a href="#" th:href="@{/admin/cypher/new}">Přidat</a>
+                    <a href="#" th:href="@{/admin/cypher/add}">Přidat</a>
                 </td>
 
             </tr>
