--- a/src/main/resources/templates/hint/detail.html
+++ b/src/main/resources/templates/hint/detail.html
@@ -12,7 +12,7 @@
 <body>
 <div class="container">
     <h2><span th:text="${heading}">Nadpis</span></h2>
-    <form action="#" th:action="@{/admin/hint/save}" th:object="${hint}" method="post">
+    <form action="#" th:action="@{/admin/hint/add}" th:object="${hint}" method="post">
         <div class="table-responsive">
             <table class="table" style="font-size: 18px">
                 <tr>
