--- a/src/main/resources/templates/hint/list.html
+++ b/src/main/resources/templates/hint/list.html
@@ -60,7 +60,7 @@
             </tr>
             <tr>
                 <td colspan="4" align="center">
-                    <a href="#" th:href="@{/admin/hint/new(cypherId=${cypher.cypherId})}">Přidat</a>
+                    <a href="#" th:href="@{/admin/hint/add(cypherId=${cypher.cypherId})}">Přidat</a>
                 </td>
 
             </tr>
