admin - go back to the cypher list fix

--- a/src/main/resources/templates/hint/list.html
+++ b/src/main/resources/templates/hint/list.html
@@ -67,7 +67,7 @@
         </table>
     </div>
     <br>
-    <a align="center" href="#" th:href="@{../cypher}"><b>Zpět na seznam šifer</b></a>
+    <a align="center" href="#" th:href="@{../admin/cypher}"><b>Zpět na seznam šifer</b></a>
 </div>
 </body>
 </html>
