--- a/src/main/resources/templates/client/cypher/detail.html
+++ b/src/main/resources/templates/client/cypher/detail.html
@@ -122,7 +122,7 @@
                         </div>
                     </th:block>
                     <a href="#" th:href="|/cypher/${cypher.cypherId}/hint|">
-                        <button class="btn btn-white">Získat nápovědu</button>
+                        <button class="btn btn-white">Vybrat nápovědu</button>
                     </a>
                     <br/>
                 </div>
